# Alenka

./: .gitignore  .gitmodules  Alenka.pro  CMakeLists.txt  README.md  ZSBS.pro  amd.unix.build  amd.win.build  amd.win64.build  build  build.template  build.txt  complexFromArray.m  deploy.bat  deploy_unix.sh  deploy_win.sh  deploy_win32.bat  deploy_win64.bat  download-libraries.sh  loadBuffers.m  nvidia.unix.build  nvidia.win.build  nvidia.win32.build  nvidia.win64.build  out  plotBuffers.m  readBuffer.m  unix.amd.build  unix.build  unix.nvidia.build  visualizeFilter.m  win.amd.build  win.build  win.nvidia.build  win32.build  win64.build
Alenka-File/: CMakeLists.txt
Alenka-File/include/AlenkaFile/: abstractdatamodel.h  biosigfile.h  cnt.h  datafile.h  datamodel.h  edf.h  eep.h  gdf2.h  mat.h
Alenka-File/src/: biosigfile.cpp  cnt.cpp  datafile.cpp  datamodel.cpp  edf.cpp  edflib_extended.cpp  edflib_extended.h  eep.cpp  gdf2.cpp  mat.cpp
Alenka-Signal/: CMakeLists.txt
Alenka-Signal/include/AlenkaSignal/: cluster.h  filter.h  filterprocessor.h  montage.h  montageprocessor.h  openclcontext.h  openclprogram.h  spikedet.h
Alenka-Signal/src/: cluster.cpp  filter.cpp  filterprocessor.cpp  filtfilt.h  kernels.cl  montage.cpp  montageprocessor.cpp  openclcontext.cpp  openclprogram.cpp  spikedet.cpp
App/: App.pro  Doxyfile  color.frag  event.vert  kernels.cl  montageHeader.cl  montageHeader.txt  rectangleLine.vert  shader.frag  shader.vert  signal.vert
App/resources/: kernels.cl  resources.qrc
App/src/: canvas.cpp  canvas.h  codeeditdialog.cpp  codeeditdialog.h  context.cpp  context.h  error.cpp  error.h  eventmanager.cpp  eventmanager.h  eventmanager.ui  eventmanagerdelegate.cpp  eventmanagerdelegate.h  eventtypemanager.cpp  eventtypemanager.h  eventtypemanager.ui  eventtypemanagerdelegate.cpp  main.cpp  manager.cpp  manager.h  montagemanager.cpp  montagemanager.h  montagemanager.ui  myapplication.cpp  myapplication.h  openclcontext.cpp  openclcontext.h  openclprogram.cpp  openclprogram.h  openglinterface.cpp  openglinterface.h  openglprogram.cpp  openglprogram.h  options.cpp  options.h  program.cpp  program.h  signalfilebrowserwindow.cpp  signalfilebrowserwindow.h  signalviewer.cpp  (+14 more)
Test/: Test.pro  gdf2_test.h  test.cpp
Test/src/: filter_test.h  gdf2_test.h  test.cpp
doc/: Doxyfile
include/: detailedexception.h  elidedlabel.h  helplink.h  localeoverride.h
libraries/: .gitignore  download-libraries.sh
libraries/biosig/: CMakeLists.txt  DESCRIPTION  INSTALL  README  VERSION  biosig-dev.h  biosig.c  biosig2.c  biosig_client.c  biosig_fhir.c  biosig_server.c  config.h.in  configure  configure.ac  pu.c  save2gdf.c
libraries/biosig/R/: README  sload.c  sload.r
libraries/biosig/XMLParser/: tinyxml.cpp  tinyxml.h
libraries/biosig/doc/: biosig_fhir.1  pu.1
libraries/biosig/examples/: generate_gdf_file.c
libraries/biosig/java/: biosig.i
libraries/biosig/macports/: insert_checksums.sh  mk_diff.sh
libraries/biosig/macports/science/libbiosig/: Portfile  Portfile.in
libraries/biosig/mex/: DESCRIPTION  README  mexSLOAD.cpp  mexSSAVE.cpp
libraries/biosig/mma/: INSTALL  README  mliver.c  mySLOAD.m  sload.c  sload.tm
libraries/biosig/perl/: biosig.i  demo.pl
libraries/biosig/php/: biosig.i  demo.php
libraries/biosig/python/: README  biosigmodule.c  example.py  setup.py
libraries/biosig/ruby/: biosig.i
libraries/biosig/src/: flowmon.c  flowmon2.c  ttl2trig.c
libraries/biosig/t210/: sopen_famos_read.c  sopen_tdms_read.c
libraries/biosig/t230/: sopen_hl7aecg.cpp
libraries/biosig/t240/: modules.mk  sopen_fef_read.c
libraries/biosig/tcl/: biosig.i
libraries/biosig/test0/: test_scp_decode.c
libraries/cluster/: .gitignore  CMakeLists.txt  cluster.h  format-cluster.sh  my_corr.m  removeFirstComment.awk  repeat_if_smaller.m  spike_cluster_cpp.m  spike_cluster_v12.m
libraries/cluster/codegen/lib/spike_cluster_cpp/: combine_vector_elements.cpp  combine_vector_elements.h  eml_rand.cpp  eml_rand.h  eml_rand_mt19937ar_stateful.cpp  eml_rand_mt19937ar_stateful.h  eye.cpp  eye.h  fileManager.cpp  fileManager.h  fprintf.cpp  fprintf.h  mean.cpp  mean.h  mod.cpp  mod.h  nullAssignment.cpp  nullAssignment.h  pca.cpp  pca.h  quantile.cpp  quantile.h  rand.cpp  rand.h  randperm.cpp  randperm.h  repmat.cpp  repmat.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  sort1.cpp  sort1.h  sortIdx.cpp  sortIdx.h  spike_cluster_cpp.cpp  (+34 more)
libraries/neuroscan/: CMakeLists.txt  README.md  header.h  header.m
misc/: alenkaSave.m  coverage.sh  deploy-linux.sh  deploy-ubu.sh  deploy-unix.sh  deploy-win.sh  deploy-windows.sh  make-install.sh
misc/deploy/: linux.sh  mac.sh  montageHeader.cl  ubu.sh  (+5 more)
resources/: color.frag  event.vert  montageHeader.cl  rectangleLine.vert  resources.qrc  signal.vert
src/: canvas.cpp  canvas.h  error.cpp  error.h  filetype.cpp  filetype.h  main.cpp  montagetemplatedialog.cpp  montagetemplatedialog.h  myapplication.cpp  myapplication.h  openglinterface.cpp  openglinterface.h  openglprogram.cpp  openglprogram.h  options.cpp  options.h  signalfilebrowserwindow.cpp  signalfilebrowserwindow.h  signalviewer.cpp  signalviewer.h  spikedetanalysis.cpp  spikedetanalysis.h  spikedetsettingsdialog.cpp  spikedetsettingsdialog.h  tracklabelbar.cpp  tracklabelbar.h
unit-test/: CMakeLists.txt  gtest.cpp  lrucache_test.cpp
unit-test/file/: common.h  data_model_test.cpp  primary_file_test.cpp  save_as_test.cpp
unit-test/signal/: filter_allpass_test.cpp  filter_design_test.cpp  filter_test.cpp  montage_static_test.cpp  simple_montage_test.cpp  spikedet_test.cpp
unit-test/src/: lrucache_test.cpp
unit-test/src/file/: common.h  data_model_test.cpp  primary_file_test.cpp  save_as_test.cpp
unit-test/src/signal/: cluster_test.cpp  filter_allpass_test.cpp  filter_design_test.cpp  filter_test.cpp  montage_coordinate_test.cpp  montage_label_test.cpp  montage_special_test.cpp  montage_static_test.cpp  simple_montage_test.cpp  spikedet_test.cpp
unit-test/test-data/: .gitignore  data0.md5  download-data.sh
(+210 files in other folders)
